--- a/bio.html
+++ b/bio.html
@@ -3,17 +3,19 @@
 <html>
 
 <head>
+	<meta charset="UTF-8">
 	<title> Bio </title>
+	<link rel='stylesheet' href='portfolio.css'/>
 </head>
 
 <h1> Biography </h1>
 <h2> Tiffani Lau  </h2>
 
-<body>
+<div>
 Tiffani was born in California and went to middle school and high school in San Jose.  She moved to Massachusetts to attend Tufts University.  Her hobbies include crochetching, knitting, and bare-foot hiking.  Her life is currently not too exciting, but she hopes to find Comp20 enriching and fulfilling.
 
 
-</body>
+</div>
 
 
 
